username in user-header overflow fixed. Used username component

--- a/src/app/username/username.component.scss
+++ b/src/app/username/username.component.scss
@@ -16,14 +16,17 @@
 .no-a {
     text-decoration: none;
     font-weight: 500;
-    &:hover {
-        text-decoration: none;
-        color: $primary;
-    }
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     display: flow-root;
     -webkit-line-clamp: 1;
     max-width: 100%;
+}
+
+.no-a.hover-class {
+    &:hover {
+        text-decoration: none;
+        color: $primary;
+    }
 }
